argocd_install/ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: "selfsigned-argocd-ca-issuer"
    # nginx server config for redirect
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # redirect loop err_too_many_redirects fix
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  tls:
    - hosts:
        - argocd.demo.com
        - argocd.localhost
      secretName: argocd-cert-manager-tls # cert-manager will store the created certificate in this secret.
  rules:
  - host: argocd.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  - host: argocd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
